[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Example_Scenes/UI/DialogTemplateDemo.gd" id="1"]

[node name="DialogTemplateDemo" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.078431, 0.086274, 0.105882, 1)

[node name="Content" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 48
custom_constants/margin_top = 48
custom_constants/margin_right = 48
custom_constants/margin_bottom = 48

[node name="Layout" type="VBoxContainer" parent="Content"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Content/Layout"]
unique_name_in_owner = true
size_flags_horizontal = 3
text = "DialogTemplate Demo"

[node name="Description" type="Label" parent="Content/Layout"]
size_flags_horizontal = 3
text = "DialogTemplate is instanced and populated at runtime."

[node name="RefreshButton" type="Button" parent="Content/Layout"]
unique_name_in_owner = true
text = "Randomise Content"

[node name="TemplateHost" type="CenterContainer" parent="Content/Layout"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 320)

[node name="EventLogLabel" type="Label" parent="Content/Layout"]
size_flags_horizontal = 3
text = "Template Events"

[node name="EventLog" type="RichTextLabel" parent="Content/Layout"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content = false
scroll_active = true
scroll_following = true
